# lm

./: CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml  copilot-setup-steps.yml  release.yml
src/: auth.rs  client.rs  config.rs  error.rs  installation_key.rs  lib.rs  machine.rs  main.rs  models.rs  types.rs
tests/: cli_tests.rs  integration_tests.rs  lm_tests.rs
tests/fixtures/: README.md  auth_failure.json  auth_refresh_success.json  auth_success.json  auth_success_with_refresh.json  machine_command_error.json  machine_command_success.json  machine_status_no_widget.json  machine_status_on.json  machine_status_ready.json  machine_status_standby.json  machine_status_warming.json  machines.json  machines_response.json
