[package]
name = "lm"
version = "0.1.1"
edition = "2021"

[[bin]]
name = "lm"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive", "env"] }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
env_logger = "0.10"
log = "0.4"
tabled = "0.15"
indicatif = "0.17"
notify-rust = "4.10"
jsonwebtoken = "9.2"
chrono = "0.4"
serde_yaml = "0.9"
rpassword = "7.3"
dirs = "5.0"

[dev-dependencies]
mockito = "1.2"
wiremock = "0.5"
tempfile = "3.8"
