[package]
name = "lm-rs"
version = "0.2.1"
edition = "2021"
description = "Control your La Marzocco espresso machine from the command line or a Rust application"
authors = ["Tim Rogers <me@timrogers.co.uk>"]
license = "MIT"
repository = "https://github.com/timrogers/lm"
homepage = "https://github.com/timrogers/lm"
keywords = ["cli", "espresso", "lamarzocco", "coffee"]
categories = ["command-line-utilities"]

[[bin]]
name = "lm"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
env_logger = "0.11"
log = "0.4"
tabled = "0.20"
indicatif = "0.17"
notify-rust = "4.10"
jsonwebtoken = "9.2"
chrono = "0.4"
serde_yaml = "0.9"
rpassword = "7.3"
dirs = "6.0"
# Cryptography dependencies for new authentication system
p256 = "0.13"
sha2 = "0.10"
base64 = "0.22"
uuid = { version = "1.11", features = ["v4", "serde"] }

[dev-dependencies]
mockito = "1.2"
wiremock = "0.6"
tempfile = "3.8"
